--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2"
