--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^2.2.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -18,6 +19,7 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "randomstring": "^1.3.1"
   }
 }
